# asterinas

./: .gitignore  Cargo.toml  Components.toml  DEBUG_GUIDE.md  Makefile  OSDK.toml  README.md  libtest_crate.rlib  libtest_framevm.rlib  objdump.txt  start_disasm.txt  symbol.md  test_link.rs  vsock_perf  vsock_perf_simple  vsock_perf_simple.c  vsock_test
.cargo/: config.toml
.claude/: settings.local.json
.github/workflows/: kernel_test.yml
docs/: framevm-rref-design.md
framevm_tools/copy_build_deps/: Cargo.toml
framevm_tools/framevm_cargo/: Cargo.toml
kernel/: Cargo.toml  gdb.txt
kernel/comps/framevisor/: Cargo.toml
kernel/comps/framevisor/exchangeable/: Cargo.toml
kernel/comps/framevisor/exchangeable/src/: lib.rs
kernel/comps/framevisor/macros/: Cargo.toml
kernel/comps/framevisor/macros/src/: lib.rs
kernel/comps/framevisor/src/: arch.rs  bench.rs  boot.rs  console.rs  domain.rs  error.rs  iht.rs  lib.rs  log.rs  panic.rs  power.rs  prelude.rs  rref_registry.rs  service_domain.rs  service_iht.rs  timer.rs  user.rs  vsock.rs
kernel/comps/framevisor/src/cpu/: id.rs  mod.rs
kernel/comps/framevisor/src/iht/: callback_pool.rs  mod.rs
kernel/comps/framevisor/src/irq/: mod.rs
kernel/comps/framevisor/src/mm/: io.rs  mod.rs  page_prop.rs  vm_space.rs
kernel/comps/framevisor/src/mm/frame/: allocator.rs  frame_ref.rs  meta.rs  mod.rs  segment.rs  untyped.rs
kernel/comps/framevisor/src/mm/page_table/: mod.rs
kernel/comps/framevisor/src/sync/: guard.rs  mod.rs  mutex.rs  rwlock.rs  spin_lock.rs  wait_queue.rs
kernel/comps/framevisor/src/task/: atomic_mode.rs  mod.rs  scheduler.rs
kernel/comps/framevisor/src/task/preempt/: guard.rs  mod.rs
kernel/comps/framevisor/src/task/scheduler/: info.rs
kernel/comps/framevisor/src/util/: id_set.rs  mod.rs
kernel/comps/framevisor/src/vm/: mod.rs  task_group.rs  vcpu.rs
kernel/comps/framevisor/src/vsock/: mod.rs  queues.rs  state.rs
kernel/comps/framevm/: Cargo.toml
kernel/comps/framevm-console/: Cargo.toml
kernel/comps/framevm-console/src/: font.rs  lib.rs  mode.rs
kernel/comps/framevm/src/: bench.rs  bench_latency  bench_pong  console.rs  context.rs  cpu.rs  device.rs  error.rs  fd_table.rs  fs_context.rs  futex.rs  hello  hello.S  lib.rs  main.rs  pollee.rs  prelude.rs  process.rs  resource.rs  robust_list.rs  rootfs.rs  scheduler.rs  share_bench.rs  signal.rs  syscall.rs  task.rs  time.rs  vm.rs  vsock_client  vsock_client.S  vsock_echo_server  vsock_echo_server.S  vsock_echo_server_new
kernel/comps/framevm/src/events/: events.rs  io_events.rs  mod.rs  observer.rs  subject.rs
kernel/comps/framevm/src/net/: mod.rs
kernel/comps/framevm/src/net/socket/: mod.rs
kernel/comps/framevm/src/net/socket/unix/: mod.rs  stream.rs
kernel/comps/framevm/src/net/socket/vsock/: addr.rs  mod.rs  port.rs
kernel/comps/framevm/src/net/socket/vsock/stream/: connected.rs  connecting.rs  init.rs  listen.rs  mod.rs
kernel/comps/framevm/src/syscall/: accept.rs  access.rs  arch_prctl.rs  bind.rs  brk.rs  capget.rs  capset.rs  chdir.rs  chmod.rs  clock_gettime.rs  clone.rs  close.rs  connect.rs  dup.rs  execve.rs  fcntl.rs  fsync.rs  futex_sys.rs  getcpu.rs  getcwd.rs  getdents64.rs  getgroups.rs  getpeername.rs  getresgid.rs  getresuid.rs  getrlimit.rs  getsockname.rs  getsockopt.rs  gettimeofday.rs  ioctl.rs  link.rs  listen.rs  lseek.rs  madvise.rs  mkdir.rs  mmap.rs  mprotect.rs  mremap.rs  munmap.rs  nanosleep.rs  (+46 more)
kernel/comps/framevm/src/syscall/arch/: x86.rs
kernel/comps/framevm/src/vsock/: addr.rs  mod.rs  socket.rs
kernel/comps/framevm/test/: FrameVsock吞吐量 - Sheet1.csv  Makefile  Memory_test.md  bench_memory.c  bench_rtt_client.c  bench_rtt_server.c  bench_throughput_receiver  bench_throughput_receiver.c  bench_throughput_receiver_64  bench_throughput_sender  bench_throughput_sender.c  guest_fork_receiver.c  guest_fork_test.c  guest_receiver.c  guest_rtt_client.c  guest_rtt_server.c  guest_sender.c  syscalls.h
kernel/comps/framevsock/: Cargo.toml
kernel/comps/framevsock/src/: lib.rs  notify.rs  ring.rs  trace.rs  tuning.rs
kernel/src/: error.rs  init.rs  lib.rs
osdk/src/: cli.rs
ostd/: Cargo.toml
ostd/src/: lib.rs
regression/apps/: Makefile
regression/syscall_test/: Makefile
test/: Makefile  framevm_baremetal_memory_runbook.md  framevm_linux_stack_runbook.md  framevm_memory_benchmark.md
test/apps/: Makefile
test/bench/: Makefile  bench_common.h  bench_latency.c  bench_rtt.c  bench_throughput.c
test/initramfs/: Makefile  NESTED_VIRTUALIZATION.md  README.md
test/nix/: default.nix  initramfs.nix
test/syscall_test/: Makefile
tools/: check_framevm_boundary.sh  qemu_args.sh  run_until_qemu_marker.sh
tools/framevm/: set_guest_payload.sh
tools/github_workflows/: publish_osdk_and_ostd.sh
tools/vsock_quant/: README.md  collect_kernel_events.sh  collect_kernel_events_tracefs.sh  post_analyze_round.sh  probe_map.sh  run_guest_round.sh  run_host_round.sh
(+299 files in other folders)
