[package]
name = "aster-framevisor"
version = "0.1.0"
edition = "2021"

[dependencies]
ostd = { path = "../../../ostd" }
component = { path = "../../libs/comp-sys/component" }
aster-framevisor-macros = { path = "macros" }
aster-framevisor-exchangeable = { path = "exchangeable" }
aster-framevsock = { path = "../framevsock" }
spin = "0.9"
hashbrown = "0.14"
[lints]
workspace = true
