[package]
name = "aster-console-service"
version = "0.1.0"
edition.workspace = true

[lib]
name = "aster_console"
path = "src/lib.rs"

[dependencies]
bitflags.workspace = true
font8x8.workspace = true
int-to-c-enum.workspace = true
ostd = { package = "aster-framevisor", path = "../framevisor", default-features = false, features = ["service-payload"] }
aster-console-transport.workspace = true

[lints]
workspace = true
