[package]
name = "aster-framevm"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "framevm"
path = "src/main.rs"

[dependencies]
ostd = { workspace = true }
aster-framevisor = { workspace = true }
aster-framevsock = { workspace = true }
exchangeable = { workspace = true }
align_ext = { workspace = true }
spin = { workspace = true }
xmas-elf = { workspace = true }
[lints]
workspace = true
