[package]
name = "aster-framevm"
version = "0.1.0"
edition = "2024"

[lib]
name = "framevm"
path = "src/lib.rs"

[dependencies]
ostd = { package = "aster-framevisor", path = "../framevisor", default-features = false, features = ["service-payload"] }
align_ext = { workspace = true }
aster-console = { package = "aster-console-service", path = "../framevm-console" }
aster-framevsock = { workspace = true }
bitflags = { workspace = true }
cfg-if = { workspace = true }
const_format = { workspace = true }
cpio-decoder = { workspace = true }
keyable-arc = { workspace = true }
lending-iterator = { workspace = true }
no_std_io2 = { workspace = true }
rand = { workspace = true, features = ["std_rng"] }
xmas-elf = { workspace = true }

[features]
default = []

[lints]
workspace = true
