[package]
name = "aster-framevsock"
version = "0.1.0"
edition = "2021"

[dependencies]
ostd = { path = "../../../ostd" }
component = { path = "../../libs/comp-sys/component" }
exchangeable = { package = "aster-framevisor-exchangeable", path = "../framevisor/exchangeable" }
log = "0.4"
spin = "0.9"

[lints]
workspace = true

